[gd_scene load_steps=6 format=3 uid="uid://dnlowaumxp2p"]

[ext_resource type="Script" path="res://Scripts/adControl.gd" id="1_44d5g"]
[ext_resource type="Texture2D" uid="uid://btorl2i4nm8j0" path="res://Assets/Buttons/BotonBuy_1.png" id="1_pn48u"]
[ext_resource type="Texture2D" uid="uid://bm40aygmslhew" path="res://Assets/Buttons/BotonBuy.png" id="2_g800o"]
[ext_resource type="PackedScene" uid="uid://bb3uos35dnurr" path="res://Scenes/adModal.tscn" id="3_71qne"]
[ext_resource type="PackedScene" uid="uid://d4b7p23nleolx" path="res://Scenes/adRewardModal.tscn" id="5_va782"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_44d5g")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 167.0
offset_right = 479.0
offset_bottom = 81.0

[node name="multGanancias" type="TextureButton" parent="VBoxContainer"]
self_modulate = Color(0.0509804, 1, 0, 1)
layout_mode = 2
texture_normal = ExtResource("1_pn48u")
texture_pressed = ExtResource("2_g800o")
texture_disabled = ExtResource("2_g800o")

[node name="Timer" type="Timer" parent="VBoxContainer/multGanancias"]

[node name="gemYdinero" type="TextureButton" parent="VBoxContainer"]
self_modulate = Color(1, 0, 1, 1)
layout_mode = 2
texture_normal = ExtResource("1_pn48u")
texture_pressed = ExtResource("2_g800o")
texture_disabled = ExtResource("2_g800o")

[node name="Timer" type="Timer" parent="VBoxContainer/gemYdinero"]

[node name="gemas" type="TextureButton" parent="VBoxContainer"]
self_modulate = Color(1, 0, 0, 1)
layout_mode = 2
texture_normal = ExtResource("1_pn48u")
texture_pressed = ExtResource("2_g800o")
texture_disabled = ExtResource("2_g800o")

[node name="Timer" type="Timer" parent="VBoxContainer/gemas"]

[node name="adModal" parent="." instance=ExtResource("3_71qne")]
visible = false
offset_left = 74.0
offset_top = 317.0
offset_right = 114.0
offset_bottom = 357.0

[node name="adRewardModal" parent="." instance=ExtResource("5_va782")]
visible = false
offset_left = 74.0
offset_top = 333.0
offset_right = 114.0
offset_bottom = 373.0

[connection signal="visibility_changed" from="adRewardModal" to="." method="_on_ad_reward_modal_visibility_changed"]
